fixed z-index for wave

--- a/src/components/ApplianceButton/ApplianceButton.module.scss
+++ b/src/components/ApplianceButton/ApplianceButton.module.scss
@@ -60,14 +60,13 @@
     width: 200%;
     height: 200%;
     transform: translate(-50%, -75%);
-    z-index: 2;
   }
   //full color wave
   &:before {
     border-radius: 45%;
     background: rgba(255, 255, 255, 1);
     animation: animate 10s linear infinite;
-    z-index: 2;
+    z-index: 3;
   }
 
   //half transparent color wave to make more dynamic
@@ -75,7 +74,7 @@
     border-radius: 40%;
     background: rgba(255, 255, 255, 0.5);
     animation: animate 20s linear infinite;
-    z-index: 2;
+    z-index: 4;
   }
 }
 
